// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations add to entity 1`] = `
Array [
  Object {
    "attributes": Object {
      "name": "Books",
    },
    "children": Array [
      Object {
        "attributes": Object {
          "name": "Fantastic",
        },
        "children": Array [],
        "identifier": 2,
        "properties": Object {
          "expanded": false,
          "selected": false,
        },
      },
      Object {
        "attributes": Object {
          "name": "Fantasy",
        },
        "children": Array [],
        "identifier": 3,
        "properties": Object {
          "expanded": false,
          "selected": false,
        },
      },
      Object {
        "attributes": Object {
          "name": "Adventure",
        },
        "children": Array [
          Object {
            "attributes": Object {
              "name": "Miguel de Cervantes",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "name": "Dom Quixote",
                },
                "children": Array [],
                "identifier": 6,
                "properties": Object {
                  "expanded": false,
                  "selected": false,
                },
              },
            ],
            "identifier": 5,
            "properties": Object {
              "expanded": false,
              "selected": false,
            },
          },
          Object {
            "attributes": Object {
              "name": "Alexandre Dumas",
            },
            "children": Array [],
            "identifier": 7,
            "properties": Object {
              "expanded": false,
              "selected": false,
            },
          },
          Object {
            "attributes": Object {
              "name": "Louis Stevenson",
            },
            "children": Array [],
            "identifier": 8,
            "properties": Object {
              "expanded": false,
              "selected": false,
            },
          },
        ],
        "identifier": 4,
        "properties": Object {
          "expanded": false,
          "selected": false,
        },
      },
    ],
    "identifier": 1,
    "properties": Object {
      "expanded": true,
      "selected": false,
    },
  },
  Object {
    "attributes": Object {
      "name": "Catherine Blum",
    },
    "children": Array [],
    "properties": Object {},
  },
]
`;

exports[`mutations add to selected entity 1`] = `
Array [
  Object {
    "attributes": Object {
      "name": "Books",
    },
    "children": Array [
      Object {
        "attributes": Object {
          "name": "Fantastic",
        },
        "children": Array [
          Object {
            "attributes": Object {
              "name": "Catherine Blum",
            },
            "children": Array [],
            "properties": Object {},
          },
        ],
        "identifier": 2,
        "properties": Object {
          "expanded": false,
          "selected": false,
        },
      },
      Object {
        "attributes": Object {
          "name": "Fantasy",
        },
        "children": Array [],
        "identifier": 3,
        "properties": Object {
          "expanded": false,
          "selected": false,
        },
      },
      Object {
        "attributes": Object {
          "name": "Adventure",
        },
        "children": Array [
          Object {
            "attributes": Object {
              "name": "Miguel de Cervantes",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "name": "Dom Quixote",
                },
                "children": Array [],
                "identifier": 6,
                "properties": Object {
                  "expanded": false,
                  "selected": false,
                },
              },
            ],
            "identifier": 5,
            "properties": Object {
              "expanded": false,
              "selected": false,
            },
          },
          Object {
            "attributes": Object {
              "name": "Alexandre Dumas",
            },
            "children": Array [],
            "identifier": 7,
            "properties": Object {
              "expanded": false,
              "selected": false,
            },
          },
          Object {
            "attributes": Object {
              "name": "Louis Stevenson",
            },
            "children": Array [],
            "identifier": 8,
            "properties": Object {
              "expanded": false,
              "selected": false,
            },
          },
        ],
        "identifier": 4,
        "properties": Object {
          "expanded": false,
          "selected": false,
        },
      },
    ],
    "identifier": 1,
    "properties": Object {
      "expanded": true,
      "selected": false,
    },
  },
]
`;

exports[`mutations cut entity 1`] = `
Array [
  Object {
    "attributes": Object {
      "name": "Books",
    },
    "children": Array [
      Object {
        "attributes": Object {
          "name": "Fantastic",
        },
        "children": Array [],
        "identifier": 2,
        "properties": Object {
          "expanded": false,
          "selected": false,
        },
      },
      Object {
        "attributes": Object {
          "name": "Fantasy",
        },
        "children": Array [],
        "identifier": 3,
        "properties": Object {
          "expanded": false,
          "selected": false,
        },
      },
      Object {
        "attributes": Object {
          "name": "Adventure",
        },
        "children": Array [
          Object {
            "attributes": Object {
              "name": "Alexandre Dumas",
            },
            "children": Array [],
            "identifier": 7,
            "properties": Object {
              "expanded": false,
              "selected": false,
            },
          },
          Object {
            "attributes": Object {
              "name": "Louis Stevenson",
            },
            "children": Array [],
            "identifier": 8,
            "properties": Object {
              "expanded": false,
              "selected": false,
            },
          },
        ],
        "identifier": 4,
        "properties": Object {
          "expanded": false,
          "selected": false,
        },
      },
    ],
    "identifier": 1,
    "properties": Object {
      "expanded": true,
      "selected": false,
    },
  },
]
`;

exports[`utils search 1`] = `
Object {
  "attributes": Object {
    "name": "Miguel de Cervantes",
  },
  "children": Array [
    Object {
      "attributes": Object {
        "name": "Dom Quixote",
      },
      "children": Array [],
      "identifier": 6,
      "properties": Object {
        "expanded": false,
        "selected": false,
      },
    },
  ],
  "identifier": 5,
  "properties": Object {
    "expanded": false,
    "selected": false,
  },
}
`;

exports[`utils unselect 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "properties": Object {
              "selected": false,
            },
          },
        ],
        "properties": Object {
          "selected": false,
        },
      },
    ],
    "properties": Object {
      "selected": false,
    },
  },
]
`;
